<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CountCalorie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="username">username.</string>
	<string name="password">password.</string>
	
	<string name="loginBut">logIn</string>
	<string name="loginSel">SignIn</string>
	<string name="regSel">Register</string>
	
	<string name="passcon">confirm.</string>
	<string name="age">age.</string>
	<string name="weight">weight. (lbs)</string>
	<string name="height">height.</string>
	<string name="loss">loss goal. (lbs))</string>
	<string name="register"> register </string>
	
	<string-array name="sex">
	    <item>sex.</item>
        <item>M</item>
        <item>F</item>
    </string-array>
</resources>
